[package]
name = "ingester"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", default-features = false, features = ["rustls-tls-native-roots", "connect"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", default-features = false, features = [
    "runtime-tokio", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "tls-rustls" 
]}
core = { path = "../core" }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
ordered-float = "3.4"
futures-util = "0.3"
dotenvy = "0.15"
